--- a/src/Components/Message.css
+++ b/src/Components/Message.css
@@ -64,6 +64,7 @@
     flex:1;
     margin:0px 0px 2px 2px;
     font-size: xx-small;
+    color: #000000b5;
 }
 .messagetext{
     flex:7;
@@ -82,7 +83,7 @@
 .messagetime{
     flex:9;
     margin:0px 0px 1px 0px;
-    color:grey;
+    color:#000000b5;
     font-size: xx-small;
 }
 
